# AAL--OpenGL-Visualization

./: CMakeLists.txt  Cuboid.cpp  Cuboid.h  CuboidContainer.cpp  CuboidContainer.h  FileParser.cpp  FileParser.h  Scene.cpp  Scene.h  main.cpp
